[package]
name = "cygv"
version = "0.1.1"
description = "Compute GV and GW invariants of CY manifolds."
authors = ["Andres Rios Tascon"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ariostas/cygv"

[lib]
name = "cygv"
crate-type = ["lib", "cdylib"]

[dependencies]
ctrlc = "3.4.4"
itertools = "0.14.0"
nalgebra = "0.33.0"
rug = "1.25.0"

[dependencies.pyo3]
version = "0.23.2"
features = ["abi3-py39"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]
