[package]
name = "cygv"
version = "0.1.2"
description = "Compute GV and GW invariants of CY manifolds."
authors = ["Andres Rios Tascon"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ariostas/cygv"

[lib]
name = "cygv"
crate-type = ["lib", "cdylib"]

[dependencies]
ctrlc = "3.4.4"
itertools = "0.14.0"
nalgebra = "0.34.0"
rug = "1.25.0"

[dependencies.pyo3]
version = "0.27.1"
features = ["abi3-py310"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]
